2014-08-17  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-element): When a boolean is
	expected, interpret nil as "false".

2014-08-04  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-make-xs-basic-types): Add gYearMonth,
	gYear, gMonthDay, gDay and gMonth.

2014-07-24  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-time-format): New variable.
	(soap-encode-xs-basic-type): Handle dateTime, time, date,
	gYearMonth, gYear, gMonthDay, gDay and gMonth.
	(soap-decode-date-time): New function.
	(soap-decode-xs-basic-type): Use soap-decode-date-time.

2014-07-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-encode-xs-basic-type): Validate value after
	encoding.
	(soap-decode-xs-basic-type): Validate value before decoding.

2014-07-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-validate-xs-basic-type): New function.
	(soap-validate-xs-simple-type): Call soap-validate-xs-basic-type.

2014-06-29  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-add-union): Append result to base
	instead of overwriting it.
	(soap-validate-xs-simple-type): Add union support.

2014-06-21  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-add-restriction): Translate pattern to
	Emacs regexp using xsdre-translate.
	(soap-validate-xs-simple-type): Validate value against pattern.

2014-06-03  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-add-union): Preserve WSDL order of
	inline simpleType nodes.
	(soap-decode-type): Handle union types.

2014-05-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-attributes): Decode basic-type
	attributes.

2014-05-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-get-xs-attributes-from-groups): renamed
	from soap-xs-attribute-group-consolidate, all callers updated
	(soap-get-xs-attributes): renamed from